--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "jspdf": "^2.5.1",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
