--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "gsap": "^3.11.5",
     "jspdf": "^2.5.1",
     "pdfmake": "^0.2.7",
     "react": "^18.2.0",
